--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,17 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+  <div id="target"></div>
+  <script>
+    fetch("/api/message")
+      .then(res => res.json())
+      .then(j => {
+        document.getElementById("target").innerText = j.msg;
+      });
+  </script>
+</body>
+</html>
